force-app/main/default/objects/Parameter__c/Parameter__c.object-meta.xml
<CustomObject>
    <label>Parametre</label>
    <pluralLabel>Parametreler</pluralLabel>
    <nameField>
        <label>Parametre Adı</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Central parameter object for 3-level case reason hierarchy</description>
    <recordTypes>
        <fullName>Case_Reason</fullName>
        <active>true</active>
        <label>Case Reason</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Reason_Type</fullName>
        <active>true</active>
        <label>Case Reason Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Reason_Type_Detail</fullName>
        <active>true</active>
        <label>Case Reason Type Detail</label>
    </recordTypes>
</CustomObject>