force-app/main/default/objects/Parameter__c/fields/Is_FLS_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_FLS_Eligible__c</fullName>
    <label>FLS Yapılabilir mi?</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>