force-app/main/default/objects/Parameter__c/fields/Is_Service_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_Service_Eligible__c</fullName>
    <label>Servise Atanabilir mi?</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>