force-app/main/default/objects/Parameter__c/fields/Related_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Reason__c</fullName>
    <label>İlgili Başvuru Nedeni</label>
    <type>Lookup</type>
    <referenceTo>Parameter__c</referenceTo>
    <relationshipName>Case_Reason_Types</relationshipName>
</CustomField>