force-app/main/default/objects/Parameter__c/fields/Related_Case_Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Case_Reason_Type__c</fullName>
    <label>İlgili Başvuru Nedeni Tipi</label>
    <type>Lookup</type>
    <referenceTo>Parameter__c</referenceTo>
    <relationshipName>Case_Reason_Type_Details</relationshipName>
</CustomField>