force-app/main/default/objects/Parameter__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <label>İlgili Kullanıcı</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Parameters</relationshipName>
</CustomField>