force-app/main/default/objects/Parameter__c/recordTypes/Case_Reason.recordType-meta.xml
<RecordType>
    <fullName>Case_Reason</fullName>
    <active>true</active>
    <label>Başvuru Nedeni</label>
    <description>Level 1 case reason parameter</description>
</RecordType>