force-app/main/default/objects/Parameter__c/recordTypes/Case_Reason_Type.recordType-meta.xml
<RecordType>
    <fullName>Case_Reason_Type</fullName>
    <active>true</active>
    <label>Başvuru Nedeni Tipi</label>
    <description>Level 2 case reason type parameter</description>
</RecordType>