force-app/main/default/objects/Parameter__c/recordTypes/Case_Reason_Type_Detail.recordType-meta.xml
<RecordType>
    <fullName>Case_Reason_Type_Detail</fullName>
    <active>true</active>
    <label>Başvuru Nedeni Tipi Detayı</label>
    <description>Level 3 case reason type detail - drives FLS/Service/Critical flags</description>
</RecordType>